Releasing version 1.0. Yay -- no more beta!!
git-svn-id: http://plugins.svn.wordpress.org/developer-info/trunk@1313112 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,14 @@
     position: relative;
 }
 
-.developer-info .plugin-icon {
+.developer-info .icon {
     display: inline-block;
     vertical-align: top;
-    width: 96px;
     height: 96px;
     margin-bottom: 0.25em;
+}
+.developer-info .plugin-icon {
+    width: 96px;
 }
 
 .developer-info .title {
